Refactor AbstractAggregateRoot
- change method signature getEvents() -> pollAllEvents()
- add compileTestJava encoding option